<resources>
    <string name="app_name">DrawerJetpackNavDemo</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home_fragment">Home fragment</string>
    <string name="settings_fragment">Settings fragment</string>
    <string name="account_fragment">Account fragment</string>
    <string name="home_next_fragment">Home Next fragment</string>
    <string name="settings_next_fragment">Settogs Next fragment</string>
    <string name="account_next_fragment">Account Next fragment</string>

    <string name="title_home">Home</string>
    <string name="title_settings">Settings</string>
    <string name="title_account">Account</string>
    <string name="title_settings_next">Settings-Next</string>
    <string name="title_home_next">Home-Next</string>
    <string name="title_account_next">Account-Next</string>

    <string name="open">Open</string>
    <string name="close">Close</string>
</resources>